force-app/main/default/objects/ISO_Country__mdt/ISO_Country__mdt.object-meta.xml
<CustomObject>
    <label>ISO-Country</label>
    <pluralLabel>ISO-Countries</pluralLabel>
</CustomObject>