force-app/main/default/objects/ISO_Country__mdt/fields/Dial__c.field-meta.xml
<CustomField>
    <fullName>Dial__c</fullName>
    <label>Dial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>