force-app/main/default/objects/ISO_Country__mdt/fields/ISO_Alpha_3__c.field-meta.xml
<CustomField>
    <fullName>ISO_Alpha_3__c</fullName>
    <label>ISO-Alpha-3</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>