force-app/main/default/objects/ISO_Country__mdt/fields/ISO_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Currency_Code__c</fullName>
    <label>ISO-Currency_Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>