force-app/main/default/objects/ISO_Country__mdt/fields/ISO_Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>ISO_Currency_Name__c</fullName>
    <label>ISO-Currency_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>