force-app/main/default/objects/ISO_Country__mdt/fields/ISO_Numeric__c.field-meta.xml
<CustomField>
    <fullName>ISO_Numeric__c</fullName>
    <label>ISO-Numeric</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>