force-app/main/default/objects/ISO_Country__mdt/fields/Official_Name_en__c.field-meta.xml
<CustomField>
    <fullName>Official_Name_en__c</fullName>
    <label>Official_Name_en</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>